--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_fonts.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_fonts.scss
@@ -13,34 +13,34 @@
 // 	font-weight: 300;
 // 	font-style: italic;
 // }
-@font-face {
-	font-family: 'Founders Grotesk';
-	src: url('../fonts/founders-grotesk/FoundersGrotesk-Regular.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk/FoundersGrotesk-Regular.woff') format('woff');
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'Founders Grotesk';
-	src: url('../fonts/founders-grotesk/FoundersGrotesk-RegularItalic.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk/FoundersGrotesk-RegularItalic.woff') format('woff');
-	font-weight: 400;
-	font-style: italic;
-}
-@font-face {
-	font-family: 'Founders Grotesk';
-	src: url('../fonts/founders-grotesk/FoundersGrotesk-Medium.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk/FoundersGrotesk-Medium.woff') format('woff');
-	font-weight: 500;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'Founders Grotesk';
-	src: url('../fonts/founders-grotesk/FoundersGrotesk-MediumItalic.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk/FoundersGrotesk-MediumItalic.woff') format('woff');
-	font-weight: 500;
-	font-style: italic;
-}
+// @font-face {
+// 	font-family: 'Founders Grotesk';
+// 	src: url('../fonts/founders-grotesk/FoundersGrotesk-Regular.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk/FoundersGrotesk-Regular.woff') format('woff');
+// 	font-weight: 400;
+// 	font-style: normal;
+// }
+// @font-face {
+// 	font-family: 'Founders Grotesk';
+// 	src: url('../fonts/founders-grotesk/FoundersGrotesk-RegularItalic.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk/FoundersGrotesk-RegularItalic.woff') format('woff');
+// 	font-weight: 400;
+// 	font-style: italic;
+// }
+// @font-face {
+// 	font-family: 'Founders Grotesk';
+// 	src: url('../fonts/founders-grotesk/FoundersGrotesk-Medium.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk/FoundersGrotesk-Medium.woff') format('woff');
+// 	font-weight: 500;
+// 	font-style: normal;
+// }
+// @font-face {
+// 	font-family: 'Founders Grotesk';
+// 	src: url('../fonts/founders-grotesk/FoundersGrotesk-MediumItalic.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk/FoundersGrotesk-MediumItalic.woff') format('woff');
+// 	font-weight: 500;
+// 	font-style: italic;
+// }
 // @font-face {
 // 	font-family: 'Founders Grotesk';
 // 	src: url('../fonts/founders-grotesk/FoundersGrotesk-Semibold.woff2') format('woff2'),
@@ -55,58 +55,58 @@
 // 	font-weight: 600;
 // 	font-style: italic;
 // }
-@font-face {
-	font-family: 'Founders Grotesk';
-	src: url('../fonts/founders-grotesk/FoundersGrotesk-Bold.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk/FoundersGrotesk-Bold.woff') format('woff');
-	font-weight: 700;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'Founders Grotesk';
-	src: url('../fonts/founders-grotesk/FoundersGrotesk-BoldItalic.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk/FoundersGrotesk-BoldItalic.woff') format('woff');
-	font-weight: 700;
-	font-style: italic;
-}
+// @font-face {
+// 	font-family: 'Founders Grotesk';
+// 	src: url('../fonts/founders-grotesk/FoundersGrotesk-Bold.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk/FoundersGrotesk-Bold.woff') format('woff');
+// 	font-weight: 700;
+// 	font-style: normal;
+// }
+// @font-face {
+// 	font-family: 'Founders Grotesk';
+// 	src: url('../fonts/founders-grotesk/FoundersGrotesk-BoldItalic.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk/FoundersGrotesk-BoldItalic.woff') format('woff');
+// 	font-weight: 700;
+// 	font-style: italic;
+// }
 
 
 
-@font-face {
-	font-family: 'Founders Grotesk Mono';
-	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Light.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Light.woff') format('woff');
-	font-weight: 300;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'Founders Grotesk Mono';
-	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Regular.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Regular.woff') format('woff');
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'Founders Grotesk Mono';
-	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Medium.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Medium.woff') format('woff');
-	font-weight: 500;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'Founders Grotesk Mono';
-	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Semibold.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Semibold.woff') format('woff');
-	font-weight: 600;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'Founders Grotesk Mono';
-	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Bold.woff2') format('woff2'),
-	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Bold.woff') format('woff');
-	font-weight: 700;
-	font-style: normal;
-}
+// @font-face {
+// 	font-family: 'Founders Grotesk Mono';
+// 	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Light.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Light.woff') format('woff');
+// 	font-weight: 300;
+// 	font-style: normal;
+// }
+// @font-face {
+// 	font-family: 'Founders Grotesk Mono';
+// 	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Regular.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Regular.woff') format('woff');
+// 	font-weight: 400;
+// 	font-style: normal;
+// }
+// @font-face {
+// 	font-family: 'Founders Grotesk Mono';
+// 	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Medium.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Medium.woff') format('woff');
+// 	font-weight: 500;
+// 	font-style: normal;
+// }
+// @font-face {
+// 	font-family: 'Founders Grotesk Mono';
+// 	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Semibold.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Semibold.woff') format('woff');
+// 	font-weight: 600;
+// 	font-style: normal;
+// }
+// @font-face {
+// 	font-family: 'Founders Grotesk Mono';
+// 	src: url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Bold.woff2') format('woff2'),
+// 	     url('../fonts/founders-grotesk-mono/FoundersGroteskMono-Bold.woff') format('woff');
+// 	font-weight: 700;
+// 	font-style: normal;
+// }
 
 
 
@@ -183,10 +183,79 @@
 
 
 
+// @font-face {
+// 	font-family: 'Helvetica Neue Extended';
+// 	src: url('../fonts/helvetica-neue/HelveticaNeue-HeavyExt.woff2') format('woff2'),
+// 	     url('../fonts/helvetica-neue/HelveticaNeue-HeavyExt.woff') format('woff');
+// 	font-weight: 700;
+// 	font-style: normal;
+// }
+
+
+
 @font-face {
-	font-family: 'Helvetica Neue Extended';
-	src: url('../fonts/helvetica-neue/HelveticaNeue-HeavyExt.woff2') format('woff2'),
-	     url('../fonts/helvetica-neue/HelveticaNeue-HeavyExt.woff') format('woff');
+	font-family: 'Helvetica Neue Condensed';
+	src: url('../fonts/helvetica-neue/HelveticaNeue-BoldCond.woff2') format('woff2'),
+	     url('../fonts/helvetica-neue/HelveticaNeue-BoldCond.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Helvetica Neue Condensed';
+	src: url('../fonts/helvetica-neue/HelveticaNeue-BoldCond.woff2') format('woff2'),
+	     url('../fonts/helvetica-neue/HelveticaNeue-BoldCond.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
+}
+@font-face {
+	font-family: 'Helvetica Neue Condensed';
+	src: url('../fonts/helvetica-neue/HelveticaNeue-ExtBlackCond.woff2') format('woff2'),
+	     url('../fonts/helvetica-neue/HelveticaNeue-ExtBlackCond.woff') format('woff');
+	font-weight: 900;
+	font-style: normal;
+}
+
+
+
+@font-face {
+	font-family: 'Roboto Mono';
+	src: url('../fonts/roboto-mono/RobotoMono-Regular.woff2') format('woff2'),
+	     url('../fonts/roboto-mono/RobotoMono-Regular.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Roboto Mono';
+	src: url('../fonts/roboto-mono/RobotoMono-Italic.woff2') format('woff2'),
+	     url('../fonts/roboto-mono/RobotoMono-Italic.woff') format('woff');
+	font-weight: 400;
+	font-style: italic;
+}
+@font-face {
+	font-family: 'Roboto Mono';
+	src: url('../fonts/roboto-mono/RobotoMono-Medium.woff2') format('woff2'),
+	     url('../fonts/roboto-mono/RobotoMono-Medium.woff') format('woff');
+	font-weight: 500;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Roboto Mono';
+	src: url('../fonts/roboto-mono/RobotoMono-MediumItalic.woff2') format('woff2'),
+	     url('../fonts/roboto-mono/RobotoMono-MediumItalic.woff') format('woff');
+	font-weight: 500;
+	font-style: italic;
+}
+@font-face {
+	font-family: 'Roboto Mono';
+	src: url('../fonts/roboto-mono/RobotoMono-Bold.woff2') format('woff2'),
+	     url('../fonts/roboto-mono/RobotoMono-Bold.woff') format('woff');
+	font-weight: 700;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Roboto Mono';
+	src: url('../fonts/roboto-mono/RobotoMono-BoldItalic.woff2') format('woff2'),
+	     url('../fonts/roboto-mono/RobotoMono-BoldItalic.woff') format('woff');
+	font-weight: 700;
+	font-style: italic;
 }
