--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1425,6 +1425,7 @@
 		> .slick-slider {
 			position: relative;
 			margin: 0;
+			display: block;
 			.slick-list {
 				margin: 0 -1rem;
 				flex: 1 0 auto;
