--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
@@ -111,14 +111,105 @@
 
 
 
+#site-footer-header {
+	background-color: $gold;
+	text-align: left;
+}
+
+#pre-footer {
+	background-color: $extra-dark-blue;
+	color: #fff;
+	.menus {
+		padding: 0 1rem;
+		@include media-breakpoint-up(md) {
+			flex: 1 1 auto;
+		}
+	}
+}
+#footer-primary-navigation {
+	font-size: 1.5rem;
+	font-weight: 500;
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		&.menu {
+			display: flex;
+			margin: 0 -1rem;
+			> li {
+				padding: 0 1rem;
+				flex: 1 1 100%;
+				@include media-breakpoint-up(md) {
+					max-width: 12rem;
+				}
+				> a {
+					display: none;
+				}
+			}
+		}
+	}
+	a {
+		color: $tan;
+		&:hover {
+			color: $gold;
+		}
+	}
+}
+#footer-primary-cta-links {
+	max-width: none;
+	a {
+		@extend .btn-dark-purple;
+		@include media-breakpoint-up(md) {
+			display: inline-block;
+			width: auto;
+		}
+	}
+}
+#pre-footer .social-ctas {
+	margin-top: 2rem;
+	padding: 0 1rem;
+	.social-links {
+		h4 {
+			text-align: center;
+			text-transform: uppercase;
+			color: $tan;
+			letter-spacing: .1em;
+		}
+		.menu {
+			justify-content: center;
+			margin: -.75rem;
+		}
+		.menu-item {
+			padding: 0.75rem;
+			a {
+				&:hover {
+					.icon svg {
+						fill: #fff;
+					}
+				}
+			}
+			.icon svg {
+				fill: mix($extra-dark-blue, #fff, 40%);
+				@include media-breakpoint-up(md) {
+					height: 3rem;
+				}
+			}
+		}
+	}
+}
+
 #footer {
-	background-color: $dark-blue;
+	background-color: $extra-dark-blue;
 	color: rgba(#fff, .8);
 	.container {
 		> .upper {
-			padding: 4rem 0 0;
+			padding: 3rem 1rem 0;
 			@include media-breakpoint-up(md) {
+				padding: 3rem 0 0;
+			}
+			@include media-breakpoint-up(lg) {
 				display: flex;
+				justify-content: space-between;
 			}
 			@media (min-width: 1400px) {
 				margin-left: -3rem;
@@ -126,77 +217,98 @@
 			}
 		}
 		> .lower {
-			border-top: none;
-			padding: 0 0 3rem;
+			border-top: 6px solid rgba(#fff, 0.25);
+			padding: 0 1rem 3rem;
+			margin: 2rem -1rem 0;
 			@include media-breakpoint-up(md) {
 				display: flex;
 				flex-wrap: wrap;
+				padding: 0;
+				margin: 2rem 0 0;
 				padding-bottom: 2rem;
 				align-items: center;
+				padding-top: 1rem;
+			}
+			@media (min-width: 1400px) {
+				margin-left: -3rem;
+				margin-right: -3rem;
 			}
 		}
 	}
 }
 
-#footer .logos-description {
-	@include media-breakpoint-up(md) {
-		flex: 1 1 auto;
-		margin-right: 2rem;
-	}
-	.logos {
-		margin-bottom: 2rem;
-		@include media-breakpoint-up(md) {
-			margin-bottom: 3rem;
-		}
-		> .inner {
-			display: flex;
-			margin: -1rem;
-			justify-content: center;
-			align-items: center;
-			flex-wrap: wrap;
-			@include media-breakpoint-up(md) {
-				justify-content: flex-start;
-			}
-		}
-		.logo {
-			margin: 1rem;
-			img {
-				max-height: 90px;
-			}
-		}
-	}
-}
 #site-description {
-	font-size: 0.8125rem;
+	font-size: 1rem;
 	color: inherit;
 	margin: 0 auto 2rem;
-	max-width: 36rem;
+	max-width: 50rem;
 	@include media-breakpoint-up(md) {
 		text-align: left;
 		margin: 0 0 2rem;
 	}
+	@include media-breakpoint-up(lg) {
+		margin: 0;
+	}
 }
 
-#footer .logo.powered-by-sba {
-	margin-bottom: 2rem;
-	img {
-		height: 120px;
-		margin: 0 auto;
+#footer .logos {
+	flex: 0 0 auto;
+	@include media-breakpoint-up(lg) {
+		margin-left: 2rem;
+		margin-top: 1.5rem;
+	}
+	> .inner {
+		margin: -0.5rem;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		@include media-breakpoint-up(md) {
+			justify-content: flex-start;
+			margin: -1rem;
+		}
+		@include media-breakpoint-up(lg) {
+			justify-content: flex-end;
+		}
+	}
+	.logo {
+		margin: 0.5rem;
+		@include media-breakpoint-up(md) {
+			margin: 1rem;
+		}
+		&.americas-sbdc-california img {
+			max-height: 3.5rem;
+			@include media-breakpoint-up(md) {
+				max-height: 4.5rem;
+			}
+		}
+		img {
+			max-height: 4rem;
+			filter: grayscale(1);
+			mix-blend-mode: screen;
+			@include media-breakpoint-up(md) {
+				max-height: 5.5rem;
+			}
+		}
 	}
 }
 
 #site-copyright {
-	font-size: 1.5rem;
+	font-size: 1rem;
 	font-weight: 700;
 	font-family: $font-family-sans-serif;
 	margin-bottom: 2rem;
 	text-transform: none;
 	letter-spacing: 0;
+	text-transform: uppercase;
 	@include media-breakpoint-up(md) {
 		flex: 1 1 auto;
 		margin-bottom: 1rem;
 		margin-right: 2rem;
 		padding: 0;
+	}
+	a {
+		color: inherit;
+		text-decoration: underline;
 	}
 }
 
@@ -209,20 +321,24 @@
 		padding: 0;
 	}
 	ul {
-		@include media-breakpoint-up(sm) {
-			flex-wrap: wrap;
-			margin: 0 -1rem;
-		}
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0 -1rem;
+		justify-content: center;
 		@include media-breakpoint-up(md) {
 			justify-content: left;
 		}
 	}
 	li {
 		margin: 0 1rem 1rem;
+		padding: 0;
+		border: none;
 		+ li {
-			margin-left: 1rem;
-			padding-left: 0;
-			border-left: none;
+			@include media-breakpoint-up(md) {
+				padding-left: 0;
+				border-left: none;
+				margin-left: 1rem;
+			}
 		}
 	}
 	a {
